# udemy_sage

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: GUIDE.md
src/udemy_sage/: __init__.py  __main__.py  ai_client.py  cli.py  config.py  fetcher.py  parser.py  renderer.py
tests/: test_ai_client.py  test_cli.py  test_config.py  test_fetcher.py  test_parser.py  test_renderer.py
